# FileNinja

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: distribute.yaml
src/file_ninja/: file_manager.py  main.py
tests/file_ninja/: file_manager_copy_file_test.py  file_manager_create_test.py  file_manager_delete_file_test.py  file_manager_merge_files_test.py
