[project]
name = "file-ninja"
dynamic = ["version"]
description = "CLI tool to help you manage your files"
readme = "README.md"
requires-python = ">= 3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Patty Ramert", email = "patty.ramert@gmail.com"},
]
maintainers = [
  {name = "Patty Ramert", email = "patty.ramert@gmail.com"}
]
dependencies = [
  "click>=8.1.7,<9.0.0"
]

[project.scripts]
fini = "file_ninja.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.10,<7.0.0"]
dev = [
  "black>=24.8.0,<25.0.0",
  "flake8>=4.0.1,<5.0.0",
  "mypy>=0.910,<1.0.0",
  "pytest>=7.0.1,<8.0.0",
  "pylint>=3.2.6,<4.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']


[tool.pylint."messages control"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]